[package]
name = "dewploy"
version = "0.4.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
anyhow = "1"

[build-dependencies]
clap = { version = "3", features = ["derive"] }
clap_complete = "3"
