[package]
name = "dewploy"
version = "0.7.0"
authors = ["Jacek Swierk jswierk@akamai.com"]
edition = "2021"
description = "A simple tool to build and deploy Stormcloud binaries"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
